# svalbard

./: .gitignore  .goreleaser.yaml  Brewfile  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish-tools-image.yaml
build-tools/: .gitignore  go.mod  go.sum
crawl/: README.md  nordic-emergency.yaml.example  radio-comms.yaml.example
docker/: Dockerfile
docs/: usage.md
drive-runtime/: go.mod  go.sum
host-cli/: .gitignore  go.mod  go.sum
host-tui/: dashboarddeps.go  go.mod  go.sum  launch.go  wizardtypes.go
local/: README.md
presets/: default-128.yaml  default-1tb.yaml  default-2.yaml  default-256.yaml  default-2tb.yaml  default-32.yaml  default-512.yaml  default-64.yaml  finland-128.yaml  finland-1tb.yaml  finland-2.yaml  finland-256.yaml  finland-2tb.yaml  finland-32.yaml  finland-512.yaml  finland-64.yaml  nordic-128.yaml  test-1gb.yaml  test-runtime-2gb.yaml
provisioning/: Brewfile  README.md  android.md  ios.md
recipes/: dep-defaults.yaml
scripts/: build-drive-runtime.sh
tests/: test_attach.py  test_audit.py  test_builder.py  test_bundle.py  test_cli_index.py  test_commands.py  test_crawler.py  test_downloader.py  test_drive_config.py  test_indexer.py  test_local_sources.py  test_manifest.py  test_media.py  test_media_runner.py  test_presets.py  test_resolver.py  test_search_db.py  test_taxonomy.py  test_toolkit_generator.py  test_wizard.py  test_zim_extract.py
tui/: detail.go  detail_test.go  format.go  go.mod  help.go  keys.go  keys_test.go  nav.go  nav_test.go  palette.go  palette_model.go  palette_model_test.go  palette_test.go  progress.go  progress_test.go  shell.go  shell_test.go  status.go  style.go  style_test.go  treepicker.go
(+748 files in other folders)
