[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primer"
version = "0.1.0"
description = "Offline knowledge kit provisioner"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
primer = "primer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/primer"]
